--- a/root/index.html
+++ b/root/index.html
@@ -47,7 +47,7 @@
                 <div class="col-homepage-intro">
                     <h2 class="title">Welcome to Rene Gutierrez's Portfolio</h2>
                     <p>As a qualified and experienced web designer, my goal is to create, develop, and design clean professional websites focused on providing solutions for every business. The look and feel of a website is just as important as the user experience and I take pride in everything I do for my clients.</p>
-                    <p class="link-button"><a href="pages/about.html" class="button">Learn More</a></p>
+                    <p class="link-button"><a href="#" class="button">Learn More</a></p>
                 </div>
                 <div class="col-feature-img">
                     <img class="intro-mobile-img" alt="Professional Websites" src="images/website-portfolio.jpg">
